# langextract

./: .dockerignore  .gitignore  .pylintrc  CHANGELOG.md  CITATION.cff  CODEOWNERS  COMMUNITY_PROVIDERS.md  CONTRIBUTING.md  Dockerfile  PR_openai_batch.md  README.md  VERTEX_AI_INTEGRATION.md  app.py  autoformat.sh  check_env.py  commit_message.txt  pyproject.toml  railway.toml  setup.py  test_minimax.py  test_minimax2.py  test_minimax3.py  test_minimax4.py  test_minimax5.py  test_new_minimax_provider.py  test_vertex_integration.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
benchmarks/: benchmark.py  fuzzy_benchmark.py
examples/: dashscope_example.py  vertex_ai_example.py
examples/custom_provider_plugin/: README.md  pyproject.toml  test_example_provider.py
examples/custom_provider_plugin/langextract_provider_example/: provider.py  schema.py
langextract/: __init__.py  _config.py  _logging.py  annotation.py  chunking.py  data_lib.py  docling_support.py  exceptions.py  extraction.py  factory.py  inference.py  io.py  observability.py  plugins.py  progress.py  prompt_validation.py  prompting.py  registry.py  resolver.py  retry_utils.py  schema.py  validacao.py  visualization.py
langextract-doubao/: README.md  pyproject.toml  test_plugin.py
langextract-doubao/langextract_doubao/: __init__.py  provider.py  schema.py
langextract-matrixai/: test_plugin.py
langextract-vllm/: pyproject.toml
scripts/: benchmark_install.py  create_provider_plugin.py  validate_community_providers.py  verify_integrity.py
server/: app.py  models.py
tests/: __init__.py  annotation_test.py  chunking_edge_cases_test.py  chunking_test.py  conftest.py  data_lib_test.py  docling_support_test.py  extract_precedence_test.py  extract_schema_integration_test.py  factory_provider_loading_test.py  factory_schema_test.py  factory_test.py  format_handler_test.py  fuzzy_alignment_cases_test.py  fuzzy_alignment_test.py  gemini_retry_test.py  inference_test.py  init_test.py  io_test.py  logging_config_test.py  multimodal_test.py  openai_batch_test.py  poc_marker_test.py  progress_test.py  prompt_validation_test.py  prompting_test.py  schema_test.py  (+26 more)
(+80 files in other folders)
